# dev-dashboard

./: .gitignore  Dockerfile  LICENSE  docker-compose.yml  install.ps1  install.sh  pyproject.toml  readme.md  repos.json  requirements.txt
app/: __init__.py  cli.py  main.py
app/config/: todos.json
app/modules/: activity_panel.py  docker_panel.py  github_repos_panel.py  logo_panel.py  nav_bar.py  repo_panel.py  system_panel.py  todo_panel.py
app/pages/: dashboard_page.py  docker_page.py  logs_page.py  repos_page.py
app/screens/: repos_screen.py
app/utils/: logger.py  repo_store.py
dev_dashboard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
