[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dev-dashboard"
version = "version = "0.1.3""
description = "Terminal Control Center for Developers"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
  { name = "Jack Westgarth" }
]

dependencies = [
  "textual",
  "rich",
  "psutil",
  "requests",
  "docker",
  "gitpython",
  "python-dotenv"
]

[project.scripts]
dev-dashboard = "app.cli:main"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["projects*", "docs*", "tests*"]
